force-app/main/default/objects/Amendment__c/fields/Other_Link2__c.field-meta.xml
<CustomField>
    <fullName>Other_Link2__c</fullName>
    <label>Amendment Other Link [LEGACY]</label>
    <type>Url</type>
</CustomField>