force-app/main/default/objects/Amendment__c/fields/RCA_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>RCA_Agreement_Link__c</fullName>
    <label>Amendment RCA Agreement Link</label>
    <type>Url</type>
</CustomField>