force-app/main/default/objects/Amendment__c/fields/RCA_Templates_Link__c.field-meta.xml
<CustomField>
    <fullName>RCA_Templates_Link__c</fullName>
    <label>[Amendment Other Link [LEGACY]</label>
    <type>Url</type>
</CustomField>