force-app/main/default/objects/Amendment__c/fields/Research_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Research_Plan_Link__c</fullName>
    <label>Amendment Research Plan Link</label>
    <type>Url</type>
</CustomField>