force-app/main/default/objects/Amendment__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <label>Amendment Expiration Date</label>
    <type>Date</type>
</CustomField>