force-app/main/default/objects/Amendment__c/validationRules/Amendment_Requires_Active_Collaboration.validationRule-meta.xml
<ValidationRule>
    <fullName>Amendment_Requires_Active_Collaboration</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    ISNEW(),
    NOT ( ISPICKVAL( Collaboration_Opportunity__r.StageName , &apos;7- Active&apos;)) 
)</errorConditionFormula>
    <errorMessage>An amendment can only be created if the Collaboration is Active</errorMessage>
</ValidationRule>